Adicionado Sistema de Resolução do Jogo

--- a/Configurações/Opções/Config.yml
+++ b/Configurações/Opções/Config.yml
@@ -1,4 +1,4 @@
-FPS: '60'
-Altura: '900'
-Largura: '1600'
-Nome do Jogo: PlaceHolder
+Nome do Jogo: An Undead Heart
+FPS: 60
+Nível de Resolução do Jogo: 4
+Tela Cheia: false
