Limpado e Organizado Código dos Menus

--- a/Configurações/Opções/Config.yml
+++ b/Configurações/Opções/Config.yml
@@ -1,4 +1,4 @@
 Nome do Jogo: An Undead Heart
 FPS: 1
-Nível de Resolução do Jogo: 6
-Tela Cheia: true
+Nível de Resolução do Jogo: 4
+Tela Cheia: false
