--- a/Configurações/Opções/Config.yml
+++ b/Configurações/Opções/Config.yml
@@ -1,7 +1,7 @@
 Nome do Jogo: An Undead Heart
 FPS: 60
-Nível de Resolução do Jogo: 5
-Tela Cheia: false
+Nível de Resolução do Jogo: 6
+Tela Cheia: true
 Díretorios:
   Jogos Salvos: Jogos Salvos
   Imagens:
