--- a/Configurações/Textos/falas_npcs.yaml
+++ b/Configurações/Textos/falas_npcs.yaml
@@ -3,4 +3,8 @@ Espécie_1:
     "Todo mundo está entrando em uma gangue, mas eu não quero me meter nesses assuntos. Eu quero uma vida estudantil normal.",
     "O dia está lindo!",
     "Hmmmm, o que será que eu vou almoçar?",
-    "Eu vi uns alunos com armas de fogo e espadas. Da onde eles tiram essas coisas?"
+    "Eu vi uns alunos com armas de fogo e espadas. Da onde eles tiram essas coisas?",
+  Grupo_1:
+    "O que você está olhando?",
+    "A Líder é a pessoa mais incrível que eu conheço",
+    "O Concelho Estudantil é o corpo e a alma desta instituição"
