Mesclando codigos antigos

--- a/Configurações/Opções/Config.yml
+++ b/Configurações/Opções/Config.yml
@@ -12,3 +12,12 @@ Díretorios:
       Novo Jogo: Menu de Novo Jogo
       Carregar Save: Menu para Carregar Jogo Salvo
       Como Jogar: Menu de Como Jogar
+Diretórios:
+  Pai: Configurações
+  Menu das Opções: Menus/Opções
+  Controles: Menus/Controles
+  Configurações de Vídeo: Menus/Vídeo
+  Jogos Salvos: Jogos Salvos
+  Menu dos Jogos Salvos: Menus/Jogos Salvos
+  Iniciar Novo Jogo: Menus/Inicar Novo Jogo
+  Jogo: Jogo
